Proof of concept: multiple click event aware areas that will inject data into users clipboard

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,7 +4,9 @@ html(ng-app='patch-it')
     // SCRIPTS
     script(src="/js/dependencies/sails.io.js")
     script(src="/js/dependencies/angular.js")
+    script(src="/js/dependencies/bootstrap/ZeroClipboard.min.js")
     script(src="/js/dependencies/bootstrap/ui-bootstrap.js")
+    script(src="/js/dependencies/jquery-2.1.3.min.js")
     script(src="/js/login.js")
     // SCRIPTS END
     // STYLES
