--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,13 +7,13 @@ html(ng-app='patch-it')
     script(src="/js/dependencies/bootstrap/ZeroClipboard.min.js")
     script(src="/js/dependencies/bootstrap/ui-bootstrap.js")
     script(src="/js/dependencies/jquery-2.1.3.min.js")
-    script(src="/js/login.js")
+    script(src="/js/app.js")
     // SCRIPTS END
     // STYLES
-    link(rel="stylesheet", href="/styles/bootstrap-theme.min.css")
     link(rel="stylesheet", href="/styles/bootstrap.min.css")
     link(rel="stylesheet", href="/styles/importer.css")
     // STYLES END
+
   body
     block menu
     block content
