--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,14 +3,15 @@ html(ng-app='patch-it')
     title= sails.config.appName + ' | ' + title
     // SCRIPTS
     script(src="/js/dependencies/sails.io.js")
-    script(src="/js/dependencies/angular.js")
-    script(src="/js/dependencies/bootstrap/ZeroClipboard.min.js")
-    script(src="/js/dependencies/bootstrap/ui-bootstrap.js")
-    script(src="/js/dependencies/jquery-2.1.3.min.js")
+    script(src="/js/dependencies/angular/angular.js")
+    script(src="/js/dependencies/angular-bootstrap/ui-bootstrap-tpls.js")
+    script(src="/js/dependencies/jquery/jquery.js")
+    script(src="/js/dependencies/ng-clip/ngClip.js")
+    script(src="/js/dependencies/zeroclipboard/ZeroClipboard.js")
     script(src="/js/app.js")
+    script(src="/js/modules/suite.js")
     // SCRIPTS END
     // STYLES
-    link(rel="stylesheet", href="/styles/bootstrap.min.css")
     link(rel="stylesheet", href="/styles/importer.css")
     // STYLES END
 
