--- a/assets/styles/importer.css
+++ b/assets/styles/importer.css
@@ -312,8 +312,8 @@ th {
 }
 @font-face {
   font-family: 'Glyphicons Halflings';
-  src: url("../fonts/bootstrap/glyphicons-halflings-regular.eot");
-  src: url("../fonts/bootstrap/glyphicons-halflings-regular.eot?#iefix") format("embedded-opentype"), url("../fonts/bootstrap/glyphicons-halflings-regular.woff2") format("woff2"), url("../fonts/bootstrap/glyphicons-halflings-regular.woff") format("woff"), url("../fonts/bootstrap/glyphicons-halflings-regular.ttf") format("truetype"), url("../fonts/bootstrap/glyphicons-halflings-regular.svg#glyphicons_halflingsregular") format("svg");
+  src: url("<%- asset_path('bootstrap/glyphicons-halflings-regular.eot'.replace(/[#?].*$/, '')) + 'bootstrap/glyphicons-halflings-regular.eot'.replace(/(^[^#?]*)([#?]?.*$)/, '$2') %>");
+  src: url("<%- asset_path('bootstrap/glyphicons-halflings-regular.eot?#iefix'.replace(/[#?].*$/, '')) + 'bootstrap/glyphicons-halflings-regular.eot?#iefix'.replace(/(^[^#?]*)([#?]?.*$)/, '$2') %>") format("embedded-opentype"), url("<%- asset_path('bootstrap/glyphicons-halflings-regular.woff2'.replace(/[#?].*$/, '')) + 'bootstrap/glyphicons-halflings-regular.woff2'.replace(/(^[^#?]*)([#?]?.*$)/, '$2') %>") format("woff2"), url("<%- asset_path('bootstrap/glyphicons-halflings-regular.woff'.replace(/[#?].*$/, '')) + 'bootstrap/glyphicons-halflings-regular.woff'.replace(/(^[^#?]*)([#?]?.*$)/, '$2') %>") format("woff"), url("<%- asset_path('bootstrap/glyphicons-halflings-regular.ttf'.replace(/[#?].*$/, '')) + 'bootstrap/glyphicons-halflings-regular.ttf'.replace(/(^[^#?]*)([#?]?.*$)/, '$2') %>") format("truetype"), url("<%- asset_path('bootstrap/glyphicons-halflings-regular.svg#glyphicons_halflingsregular'.replace(/[#?].*$/, '')) + 'bootstrap/glyphicons-halflings-regular.svg#glyphicons_halflingsregular'.replace(/(^[^#?]*)([#?]?.*$)/, '$2') %>") format("svg");
 }
 .glyphicon {
   position: relative;
