--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,20 +1,69 @@
-html(ng-app='patch-it')
+html(ng-app='patch-it' lang='en')
   head
     title= sails.config.appName + ' | ' + title
+    meta(charset='utf-8')
+    meta(http-equiv='X-UA-Compatible', content='IE=edge')
+    meta(name='viewport', content='width=device-width, initial-scale=1')
+    meta(name='description', content='')
+    meta(name='author', content='Leigh Johnson <hi@leighjohnson.me>')
     // SCRIPTS
     script(src="/js/dependencies/sails.io.js")
     script(src="/js/dependencies/angular/angular.js")
-    script(src="/js/dependencies/angular-bootstrap/ui-bootstrap-tpls.js")
     script(src="/js/dependencies/jquery/jquery.js")
+    script(src="/js/dependencies/angular-bootstrap/ui-bootstrap-tpls.js")
+    script(src="/js/dependencies/bootstrap-sass-official/bootstrap.js")
     script(src="/js/dependencies/ng-clip/ngClip.js")
     script(src="/js/dependencies/zeroclipboard/ZeroClipboard.js")
     script(src="/js/app.js")
-    script(src="/js/modules/suite.js")
     // SCRIPTS END
     // STYLES
     link(rel="stylesheet", href="/styles/importer.css")
     // STYLES END
-
+  body
+    // Fixed navbar
+    .navbar.navbar-default.navbar-fixed-top(role='navigation')
+      .container
+        .navbar-header
+          button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
+            span.sr-only Toggle navigation
+            span.icon-bar
+            span.icon-bar
+            span.icon-bar
+          a.navbar-brand(href='#') Project name
+        .navbar-collapse.collapse
+          ul.nav.navbar-nav
+            li.active
+              a(href='#') Home
+            li
+              a(href='#about') About
+            li
+              a(href='#contact') Contact
+            li.dropdown
+              a.dropdown-toggle(href='#', data-toggle='dropdown')
+                | Dropdown 
+                span.caret
+              ul.dropdown-menu(role='menu')
+                li
+                  a(href='#') Action
+                li
+                  a(href='#') Another action
+                li
+                  a(href='#') Something else here
+                li.divider
+                li.dropdown-header Nav header
+                li
+                  a(href='#') Separated link
+                li
+                  a(href='#') One more separated link
+          ul.nav.navbar-nav.navbar-right
+            li
+              a(href='../navbar/') Default
+            li
+              a(href='../navbar-static-top/') Static top
+            li.active
+              a(href='./') Fixed top
+        // /.nav-collapse
+    .container
   body
     block menu
     block content
