--- a/views/layout.jade
+++ b/views/layout.jade
@@ -21,7 +21,7 @@ html(ng-app='patch-it' lang='en')
     // STYLES END
   body
     // Fixed navbar
-    .navbar.navbar-default.navbar-fixed-top(role='navigation')
+    .navbar.navbar-inverse.navbar-fixed-top(role='navigation')
       .container
         .navbar-header
           button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
@@ -30,7 +30,12 @@ html(ng-app='patch-it' lang='en')
             span.icon-bar
             span.icon-bar
           a.navbar-brand(href='#')=sails.config.appName
-        .navbar-collapse.collapse
+          ul.nav.navbar-nav.pull-left
+            li.dropdown
+              a.dropdown-toggle(href='#', data-toggle='dropdown')
+                | Todo 
+                span.badge 4%           
+        .navbar-collapse.collapse.navbar-right
           ul.nav.navbar-nav
             li.active
               a(href='#') Projects
