Added remember me + res.cookie to login route

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,6 +11,7 @@ html(ng-app='patch-it' lang='en')
     script(src="/js/dependencies/angular/angular.js")
     script(src="/js/dependencies/jquery/jquery.js")
     script(src="/js/dependencies/angular-bootstrap/ui-bootstrap-tpls.js")
+    script(src="/js/dependencies/angular-cookies/angular-cookies.js")
     script(src="/js/dependencies/bootstrap-sass-official/bootstrap.js")
     script(src="/js/dependencies/ng-clip/ngClip.js")
     script(src="/js/dependencies/zeroclipboard/ZeroClipboard.js")
