--- a/views/layout.jade
+++ b/views/layout.jade
@@ -21,53 +21,42 @@ html(ng-app='patch-it' lang='en')
     link(rel="stylesheet", href="/styles/importer.css")
     // STYLES END
   body
-    // Fixed navbar
-    .navbar.navbar-inverse.navbar-fixed-top(role='navigation')
+      block menu
+      .navbar.navbar-inverse.navbar-fixed-top(role='navigation')
+        .container
+          .navbar-header
+            button.navbar-toggle.pull-left(type='button', data-toggle='collapse', data-target='.navbar-collapse')
+              span.sr-only Toggle navigation
+              span.icon-bar
+              span.icon-bar
+              span.icon-bar
+            a.navbar-brand.hidden-xs.hidden-sm(href='#')=sails.config.appName
+            .row.menu-hud.pull-left
+              block menu-hud
+       
+          .navbar-collapse.collapse.navbar-right
+            ul.nav.navbar-nav
+              li
+                a(href='#') Projects
+              li.dropdown
+                a.dropdown-toggle(href='#', data-toggle='dropdown')
+                  | User 
+                  span.caret
+                ul.dropdown-menu(role='menu')
+                  li
+                    a(href='#') Profile
+                  li
+                    a(href='#') My tasks
+                  li
+                    a(href='#') 
+                  li.divider
+                  li.dropdown-header Admin
+                  li
+                    a(href='#') Separated link
+                  li
+                    a(href='#') One more separated link
+          // /.nav-collapse
       .container
-        .navbar-header
-          button.navbar-toggle(type='button', data-toggle='collapse', data-target='.navbar-collapse')
-            span.sr-only Toggle navigation
-            span.icon-bar
-            span.icon-bar
-            span.icon-bar
-          a.navbar-brand(href='#')=sails.config.appName
-          ul.nav.navbar-nav.pull-left
-            li.dropdown
-              a.dropdown-toggle(href='#', data-toggle='dropdown')
-                | Todo 
-                span.badge 4%           
-        .navbar-collapse.collapse.navbar-right
-          ul.nav.navbar-nav
-            li.active
-              a(href='#') Projects
-            li.dropdown
-              a.dropdown-toggle(href='#', data-toggle='dropdown')
-                | Device 
-                span.caret
-              ul.dropdown-menu(role='menu')
-                li
-                  a(href='#') Action
-                li
-                  a(href='#') Another action
-                li
-                  a(href='#') Something else here
-                li.divider
-                li.dropdown-header Nav header
-                li
-                  a(href='#') Separated link
-                li
-                  a(href='#') One more separated link
-          ul.nav.navbar-nav.navbar-right
-            li
-              a(href='../navbar/') Default
-            li
-              a(href='../navbar-static-top/') Static top
-            li.active
-              a(href='./') Fixed top
-        // /.nav-collapse
-    .container
-  body
-    block menu
-    block content
-    block footer
-    block scripts
+        block content
+        block footer
+      block scripts
