--- a/assets/scss/importer.scss
+++ b/assets/scss/importer.scss
@@ -1,4 +1,5 @@
 @import "bootstrap-mincer";
 @import "bootstrap";
 @import "partials/animation";
+@import "partials/template-new";
 @import "styles";
