--- a/assets/scss/partials/_animation.scss
+++ b/assets/scss/partials/_animation.scss
@@ -4,11 +4,10 @@
 
 .animate-show.ng-hide-add.ng-hide-add-active,
 .animate-show.ng-hide-remove.ng-hide-remove-active {
-  -webkit-transition: all ease 0.3s;
-  transition: all ease 0.3s;
+  -webkit-transition: all ease-out 0.2s;
+  transition: all ease-out 0.2s;
 }
 
 .animate-show.ng-hide {
-  line-height: 0;
   opacity: 0;
 }
