--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -10,36 +10,13 @@ body { padding-top: 70px; }
   align-items: center;
 }
 
+.full-width {
+  width: 100%;
+}
+
 // Menu & Navigation HUD
 .menu-hud {
   padding-top: 8px;
   padding-bottom: 8px;
 }
 
-// Animations
-
-.animate-enter, 
-.animate-leave
-{ 
-  -webkit-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
-  -moz-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
-  -ms-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
-  -o-transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
-  transition: 400ms cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
-  position: relative;
-  display: block;
-} 
- 
-.animate-enter.animate-enter-active, 
-.animate-leave {
-  opacity: 1;
-  top: 0;
-  height: 30px;
-}
- 
-.animate-leave.animate-leave-active,
-.animate-enter {
-  opacity: 0;
-  top: -50px;
-  height: 0px;
-}
