--- a/assets/styles/importer.css
+++ b/assets/styles/importer.css
@@ -7169,34 +7169,13 @@ body {
   align-items: center;
 }
 
+.full-width {
+  width: 100%;
+}
+
 .menu-hud {
   padding-top: 8px;
   padding-bottom: 8px;
-}
-
-.animate-enter,
-.animate-leave {
-  -webkit-transition: 400ms cubic-bezier(0.25, 0.25, 0.75, 0.75) all;
-  -moz-transition: 400ms cubic-bezier(0.25, 0.25, 0.75, 0.75) all;
-  -ms-transition: 400ms cubic-bezier(0.25, 0.25, 0.75, 0.75) all;
-  -o-transition: 400ms cubic-bezier(0.25, 0.25, 0.75, 0.75) all;
-  transition: 400ms cubic-bezier(0.25, 0.25, 0.75, 0.75) all;
-  position: relative;
-  display: block;
-}
-
-.animate-enter.animate-enter-active,
-.animate-leave {
-  opacity: 1;
-  top: 0;
-  height: 30px;
-}
-
-.animate-leave.animate-leave-active,
-.animate-enter {
-  opacity: 0;
-  top: -50px;
-  height: 0px;
 }
 
 /*# sourceMappingURL=importer.css.map */
