--- a/views/partials/template-new.jade
+++ b/views/partials/template-new.jade
@@ -9,7 +9,7 @@ block content
         h3 Step 1
           h4 Choose an action:
       .row
-        .col-md-4.col-md-offset-4
+        .col-md-4.col-md-offset-4.col-xs-4.col-xs-offset-4
           .form-group
               button.btn.btn-block.btn-primary(
                 ng-click='setState("new")') Spankin' New
@@ -18,7 +18,7 @@ block content
               ng-click='setState("clone")') Clone Existing
     // Begin state.new
     div.animate-show(ng-show='state.new')
-      .col-md-4.col-md-offset-4
+      .col-md-4.col-md-offset-4.col-xs-10.col-xs-offset-2
         form.form-horizontal.form(name='new' role='form' novalidate)
           .form-group
             label(for='new.name') Name: 
@@ -41,7 +41,7 @@ block content
               id='new.project'
               ng-model='new.project'
               ng-options='project as project.name for project in projects'
-              reuired) {{new.project.value}}
+              required) {{new.project.value}}
           .form-group(required)
             label(for='new.platform') Add Platforms: 
             .btn-group()
@@ -56,7 +56,7 @@ block content
                 ng-model='new.platforms.all') All
           .form-group
             button.btn.btn-lg.btn-primary.full-width(
-              ng-click='addTemplate') Save
+              ng-click='create({name: new.name, description: new.description, project: new.project, platforms: new.platforms})') Save
 
     // End state.new
 
