Configure font-awesome

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -19,6 +19,7 @@ html(ng-app='patch-it' lang='en')
     script(src="/js/app.js")
     // SCRIPTS END
     // STYLES
+    link(rel="stylesheet", href="/styles/font-awesome/font-awesome.css")
     link(rel="stylesheet", href="/styles/importer.css")
     // STYLES END
   body
