--- a/assets/scss/importer.scss
+++ b/assets/scss/importer.scss
@@ -1,5 +1,7 @@
 @import "bootstrap-mincer";
+@import "bootstrap-sprockets";
 @import "bootstrap";
+@import "font-awesome";
 @import "partials/animation";
 @import "partials/template-new";
 @import "styles";
